--- a/src/assets/styles/reset.css
+++ b/src/assets/styles/reset.css
@@ -94,6 +94,8 @@ video {
 :focus {
     outline: 0;
 }
+
+
 /* HTML5 display-role reset for older browsers */
 article,
 aside,
@@ -386,9 +388,7 @@ textarea {
     text-shadow: none;
 }
 ::selection {
-    background: #b3d4fc;
-    text-shadow: none;
-}
+    user-select: none;}
 img {
     vertical-align: middle;
 }
